Fixing font/spacing

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -218,12 +218,12 @@
 
 	#team-header-first {
 		font-size: 16pt;
-		margin-left: -227px;
+		margin-left: -226.7px;
 	}
 
 	#team-header-next {
 		font-size: 76pt;
-		margin-top: -2rem;
+		margin-top: -1.2rem;
 	}
 
 }
