--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,28 +222,6 @@ p {
 	height: 100vh;
 }
 
-.header-image h2 {
-	/*margin-top: 45vh;*/
-	font-family: industry;
-	opacity: .8;
-	letter-spacing: .75px;
-	color: #7d7d7d;
-	/*font-size: 2.5rem;*/
-	/*padding: 0 1rem 0 1rem;*/
-	margin-bottom: 0;
-	text-shadow: 0 2px 2px #000000;
-}
-
-#team-header-first {
-	margin-left: -335px;
-	font-size: 26pt;
-}
-
-#team-header-next {
-	font-size: 114pt;
-	margin-top: -2.8rem;
-}
-
 /* NAV BAR */
 
 #navigation {
@@ -614,6 +592,27 @@ label {
 
 .thumbnails {
 	margin-bottom: 4rem;
+}
+
+.header-image h2 {
+	font-family: industry;
+	opacity: .8;
+	letter-spacing: .75px;
+	color: #7d7d7d;
+	/*font-size: 2.5rem;*/
+	/*padding: 0 1rem 0 1rem;*/
+	margin-bottom: 0;
+	text-shadow: 0 2px 2px #000000;
+}
+
+#team-header-first {
+	margin-left: -334.8px;
+	font-size: 26pt;
+}
+
+#team-header-next {
+	font-size: 114pt;
+	margin-top: -2rem;
 }
 
 /* EVENTS PAGE */
